--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    
+    <!--Chiamo le icone da Font Awsome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+
+    <title>NasdaqReact: analizza in tempo reale le tue azioni preferite quotate nel NASDAQ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
