--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/iconTitle.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!--Definisco l'icona della Progressive Web App-->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/iconPWA.png" />
+    
     <!--
       Verificare funzionamento file manifest.json (https://developers.google.com/web/fundamentals/web-app-manifest/)
     -->
